--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -2,7 +2,7 @@
     <div class="alert alert-danger text-center" *ngIf="errMsg">{{errMsg}}</div>
     <div class="alert alert-success text-center" *ngIf="succMsg">{{succMsg}}</div>
     <div class="container">
-      <h1>Register -- ayan</h1>
+      <h1>Register -- anshu</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
   
