--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,27 @@
 <h1>User List</h1>
 
-<ul>
-    <li *ngFor="let user of users">
-        {{user.name}}
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone Number</th>
+            <th scope="col">Address</th>
 
-    </li>
-</ul>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr *ngFor="let user of users.data">
+            <td>{{user.name}}</td>
+            <td>{{user.email}}</td>
+            <td>{{user.phonenumber}}</td>
+            <td>{{user.address}}</td>
+            <td><button class="btn btn-info registerbtn">Edit</button></td>
+
+        </tr>
+    </tbody>
+</table>
+
+
 <a [routerLink]="['/login']">Logout</a>
